# speckle-model-checker-ui

./: .gitignore  FUNCTION.md  README.md  firebase.json  firestore.indexes.json  speckle-model-checker-ui.code-workspace
.devcontainer/: Dockerfile  bootstrap-gcloud.sh  devcontainer.json
.devcontainer/cloudrun/: Dockerfile  devcontainer.json  zshrc.cloudrun
.devcontainer/firebase/: Dockerfile  devcontainer.json  zshrc.firebase
.github/workflows/: detect_changes.yml  (+3 more)
cloudrun/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  deploy.sh  go.mod  gunicorn_config.py  main.py  prompt.md  pyproject.toml  requirements.txt  run_dev_docker.sh  run_docker_local.sh  run_local.sh
firebase/: .firebaserc  firestore.rules  signature.txt
firebase/functions/: .uvconfig.json  main.py  pyproject.toml  requirements.txt
firebase/functions/src/auth/: auth_routes.py
firebase/functions/src/projects/: project_routes.py
firebase/functions/src/projects/templates/: new_ruleset_form.html  project_details.html  project_selection.html
firebase/functions/src/rules/templates/: condition_row.html  edit_rule_form.html  rules_list.html
firebase/functions/src/rulesets/: ruleset_export.py
firebase/functions/src/rulesets/templates/: edit_ruleset.html  ruleset_card.html
firebase/functions/src/utils/: mapping.py  speckle_api.py  tsv_utils.py
functions/: main.py  pyproject.toml  requirements.txt
public/: 3cbbd5b133.html  Image.CSSAflEj.css  auth-callback.html  entry.BsHfm3Wf.css  fbconfig.js  htmx-styles.css  index.html  runs.BX9IJXfV.css  speckle-theme.css
(+135 files in other folders)
